<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/small_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_padding"
                android:layout_weight="1"
                android:text="@string/vehicle_info_dialog_title"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/ibClose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/selector_transparent_button"
                android:src="@drawable/ic_close"
                android:text="@string/vehicle_info_dialog_delete_button"
                android:textColor="@color/primary_dark_text"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_padding"
            android:layout_marginRight="@dimen/medium_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/vehicle_info_dialog_info_label"
            android:textColor="@color/primary"
            android:textSize="@dimen/small_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:paddingTop="@dimen/small_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_info_dialog_fuel_type_label"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spFuelType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_info_dialog_vehicle_type_label"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spVehicleType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/vehicle_info_dialog_average_fuel_consumption_label"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/TextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etInCityFuelConsumption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_info_dialog_in_city_label"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/TextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etOutCityFuelConsumption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_info_dialog_out_city_label"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_padding"
            android:layout_marginRight="@dimen/medium_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/vehicle_info_dialog_save_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_padding"
            android:layout_marginRight="@dimen/medium_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@drawable/selector_transparent_button"
            android:text="@string/vehicle_info_dialog_later_button"
            android:textColor="@color/primary_dark_text"/>

    </LinearLayout>

</android.support.v7.widget.CardView>