<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                      android:layout_width="match_parent"
                                      android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/root"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ibClose"
            android:layout_marginTop="@dimen/large_padding"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_padding"
                android:layout_marginRight="@dimen/small_padding"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivAccident"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_accident"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_accident"
                    android:textColor="@color/primary_light_text"/>

                <ImageView
                    android:id="@+id/ivCongestion"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_congestion"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_congestion"
                    android:textColor="@color/primary_light_text"/>

                <ImageView
                    android:id="@+id/ivTrafficCamera"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_camera"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_traffic_camera"
                    android:textColor="@color/primary_light_text"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_padding"
                android:layout_marginRight="@dimen/small_padding"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivRoadClosure"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_closure"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_road_closure"
                    android:textColor="@color/primary_light_text"/>

                <ImageView
                    android:id="@+id/ivConstruction"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_construction"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_construction"
                    android:textColor="@color/primary_light_text"/>

                <ImageView
                    android:id="@+id/ivPolice"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_police"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_police"
                    android:textColor="@color/primary_light_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_padding"
                android:layout_marginRight="@dimen/small_padding"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivHazard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_hazard"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_hazard"
                    android:textColor="@color/primary_light_text"/>

                <ImageView
                    android:id="@+id/ivEvent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_event"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_event"
                    android:textColor="@color/primary_light_text"/>

                <ImageView
                    android:id="@+id/ivParking"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_incident_type_park"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/options_activity_parking"
                    android:textColor="@color/primary_light_text"
                    android:visibility="invisible"/>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/ibClose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/medium_padding"
            android:background="@drawable/selector_white_circle_button"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_close"/>
    </RelativeLayout>

</io.codetail.widget.RevealFrameLayout>