<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/medium_padding"
              android:paddingLeft="@dimen/small_padding"
              android:paddingRight="@dimen/small_padding"
              android:paddingTop="@dimen/small_padding">

    <android.support.v7.widget.CardView
        android:id="@+id/cvSavedPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llHomePlaceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_button"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/medium_text_size">

                <ImageView
                    android:id="@+id/ivHomePlaceIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_home_blue"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="@string/place_auto_complete_activity_home_address_label"
                        android:textColor="@color/primary"/>

                    <TextView
                        android:id="@+id/tvHomePlaceAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="Murat Reis mh. Nuh Kuyusu cd. 303/3"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/vDivider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="50dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:id="@+id/llWorkPlaceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_button"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/medium_text_size">

                <ImageView
                    android:id="@+id/ivWorkPlaceIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_workplace_blue"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="@string/place_auto_complete_activity_workplace_address_label"
                        android:textColor="@color/primary"/>

                    <TextView
                        android:id="@+id/tvWorkPlaceAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="Murat Reis mh. Nuh Kuyusu cd. 303/3"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvRecentPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_padding"
                android:text="@string/place_auto_complete_activity_recent_places_label"/>

            <LinearLayout
                android:id="@+id/llRecentPlacesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>